--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.29.1",
     "qrcode.react": "^1.0.1",
     "react": "17.x",
+    "react-darkreader": "^1.5.6",
     "react-dom": "17.x",
     "reaptcha": "^1.7.2",
     "umi": "^3.5.13"
