ci: add build workflow

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "start": "cross-env UMI_ENV=DEV umi dev",
     "start:standalone": "cross-env UMI_ENV=DEV STANDALONE=1 umi dev",
-    "build": "umi build ",
-    "build:standalone": "cross-env STANDALONE=1 umi build",
+    "build": "cross-env GIT_VERSION=$(git rev-parse --short HEAD) JS_DELIVER_HOST=https://cdn.jsdelivr.net/gh/moezx/v2bu@ umi build ",
+    "build:standalone": "cross-env STANDALONE=1 GIT_VERSION=$(git rev-parse --short HEAD) JS_DELIVER_HOST=https://cdn.jsdelivr.net/gh/moezx/v2bu@ umi build",
     "postbuild:standalone": "cpx env.example.js dist && rimraf dist/assets",
     "postbuild": "rimraf dist/assets",
     "build:analyze": "cross-env ANALYZE=1 umi build",
@@ -46,7 +46,7 @@
     "moment": "^2.29.1",
     "qrcode.react": "^1.0.1",
     "react": "17.x",
-    "react-darkreader": "^1.5.6",
+    "react-darkreader": "npm:@moezx/react-darkreader@1.5.6-1",
     "react-dom": "17.x",
     "reaptcha": "^1.7.2",
     "umi": "^3.5.13"
